--- a/views/login.ejs
+++ b/views/login.ejs
@@ -803,7 +803,8 @@ input.checkbox:checked:after {
                 <input class="text" type="text" name="username" placeholder="Username" required="">
                 <input class="text email" type="password" name="password" placeholder="Password" required="">
                
-                <input type="submit" value="SIGNUP">
+                <input type="submit" value="LOGIN">
+                <p class="mt-5"><a href="/log/google" >Login with Google</a></p>
             </form>
             
         </div>
